<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temperature"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="14 °C / 39 °F"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_speed"/>

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="18 mph"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloudiness"/>

    <ImageView
        android:id="@+id/cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_temperature_deviation_for_5_days"/>

    <TextView
        android:id="@+id/deviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="5.37"/>

    <Button
        android:id="@+id/deviation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fetch_future_weather"
        />

</LinearLayout>
